fix: removed cors for new deploy